@@ -2,10 +2,12 @@ package com.pequenospasos.backend.security;
 
 import com.pequenospasos.backend.entity.Usuario;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
 
@@ -21,8 +23,7 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // De momento devolvemos una colección vacía
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority("ROLE_" + usuario.getTipoUsuario()));
     }
 
     @Override
